# py-grpc

./: LICENSE  README.md  pyproject.toml
py_grpc/: server.py
py_grpc/commands/: build_protobufs.py
tests/: test_py_grpc.py
